--- a/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list-bc/state-final-exams-list-bc.component.html
+++ b/bakalarka-frontend/src/app/pages/state-final-exams/components/state-final-exams-list-bc/state-final-exams-list-bc.component.html
@@ -71,6 +71,7 @@
       </label>
     </div>
     <button class="btn btn-raised btn-primary" [disabled]="!configForm.valid" type="submit">Uložiť zmeny</button>
+    <p class="warning">*na aplikovanie zmien je potrebné znovu načítanie stránky</p>
   </form>
 </div>
 
