--- a/bakalarka-frontend/src/app/pages/admissions/admissions-management/admissions-management.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-management/admissions-management.component.html
@@ -65,6 +65,10 @@
 
   <hr>
 
+  <h3 class="display-4">Manažment dát z INEKO</h3>
+
+  <hr>
+
   <form
     #inekoYearForm="ngForm"
     class="year-change"
