--- a/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
@@ -1,4 +1,4 @@
-<div flex justify-content-between>
+<div flex justify-content-between align-items-center>
   <h1 class="display-3">Prihláška - <strong>{{ admission.Meno }} {{ admission.Priezvisko }}</strong></h1>
   <div flex>
     <h1 *ngIf="otherAdmissions" class="display-3 admissions-count"><span class="text-muted" style="font-size: 16px;">Počet prihlášok tohto uchádzača:</span> {{ otherAdmissions.data.length }} </h1>
