--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -287,7 +287,7 @@
   [showMarkers]="false"
 ></app-map>
 
-<h3 id="abroad-students" margin-top>Zahraničné prihlášky</h3>
+<h3 id="abroadStudents" margin-top>Zahraničné prihlášky</h3>
 <hr>
 
 <div class="row">
