--- a/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
@@ -31,7 +31,7 @@
           <td *ngIf="admission['Absolvovaná_VŠ']">{{ admission['Absolvovaná_VŠ'] }} ({{ admission['Abs_VŠ'] }})</td>
           <td *ngIf="!admission['Absolvovaná_VŠ']">Žiadna</td>
         </tr>
-        <tr [ngClass]="{ 'table-success': admission.Rozh != 45, 'table-danger': admission.Rozh == 45 }">
+        <tr [ngClass]="{ 'table-success': admission.Rozh != 45, 'table-danger': admission.Rozh > 20 }">
           <th scope="row">Rozhodnutie o prijatí</th>
           <td>{{ admission['Rozhodnutie_o_prijatí'] }}</td>
         </tr>
