--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -53,6 +53,8 @@
       <input matInput placeholder="Školský rok" [(ngModel)]="schoolYear" (ngModelChange)="onFormChange()">
     </mat-form-field>
 
+    <span class="text-muted" margin-left>Školský rok zadajte vo formáte YYYY-YYYY.</span>
+
     <div
       *ngIf="selectedImportYears.length"
       class="alert alert-warning"
